remove tableID and change attachment dir

--- a/public_html/admin/clubs/finished_match.html
+++ b/public_html/admin/clubs/finished_match.html
@@ -17,7 +17,7 @@
                 </span>
             </div>
             <span class="live-match-lobby-table-num">
-                Стіл #<span id="tableID"><?=$tableNum?></span>
+                Стіл #<span><?=$tableNum?></span>
             </span>
         </div>
 		<div class="live-match-lobby-table">
@@ -52,7 +52,7 @@
 						<img class="live-match-lobby-player-img" alt="img" src="<?=PLAYER_IMG.$img2?>">
 					</p>
 				</div>
-			    <script type="text/javascript" src="finishedLobby.js"> </script>
+			    <script type="text/javascript" src="<?=PATH_H?>js/finishedLobby.js"> </script>
 			</div>
 			<div class="button_push">
 				<span>
