--- a/public_html/admin/clubs/live_match.html
+++ b/public_html/admin/clubs/live_match.html
@@ -22,7 +22,7 @@
 				</span>
 			</div>
 			<span class="live-match-lobby-table-num">
-				Стіл #<span id="tableID"><?=$tableNum?></span>
+				Стіл #<span><?=$tableNum?></span>
 			</span>
 		</div>
 		<div class="live-match-lobby-table">
