--- a/public_html/plashka.html
+++ b/public_html/plashka.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+<meta http-equiv="refresh" content="3; URL=http://billiardhub.net/plashka.php?id=<?=$tableID?>">
 	<title><?=$clubName?> - Стіл <?=$tableNum?></title>
     <link rel="stylesheet" type="text/css" href="<?=PATH_H?>css/plashka.css">
     <link href="https://fonts.googleapis.com/css?family=Exo+2&display=swap" rel="stylesheet">
