--- a/public_html/admin/clubs/live_match.html
+++ b/public_html/admin/clubs/live_match.html
@@ -47,13 +47,14 @@
 								<td id="leftScore">
 									<?=$score1?>
 								</td>
-								<th>(<?=$bestOf?>)</th>
+								<th class="best_of"><?=$bestOf?></th>
 								<td id="rightScore">
 									<?=$score2?>
 								</td>
 							</tr>
 							<tr class="live-match-lobby-frame-details">
 								<td class="live_borders" colspan="3">
+									Best of
 								</td>
 							</tr>
 							<tr>
