empty match modified

--- a/public_html/admin/clubs/empty_match.html
+++ b/public_html/admin/clubs/empty_match.html
@@ -21,7 +21,7 @@
         </div>
 		<div class="live-match-lobby-table">
 			<h3 class="live-match-lobby-info">
-			
+				Зустріч #
 			</h3>
 			<div class="live-match-lobby-player-table">
 				<div class="live-match-lobby-player">
@@ -32,18 +32,7 @@
 				</div>
 				<div class="live-match-lobby-frame-section">
 					<div class="margin-b_50"></div>
-					<table class="live-match-lobby-frame-table">
-						<tbody>
-							<tr>
-								<td id="leftFrames"></td>
-								<th></th>
-								<td id="rightFrames"></td>
-							</tr>
-							<tr class="live-match-lobby-frame-details">
-								<td colspan="3"></td>
-							</tr>
-						</tbody>
-					</table>
+					<span class="empty_match_vs">vs</span>
 				</div>
 				<div class="live-match-lobby-player">
 					<span class="live-match-lobby-player-name"></span>
