translate sign into ukrainian

--- a/public_html/admin/clubs/empty_match.html
+++ b/public_html/admin/clubs/empty_match.html
@@ -16,12 +16,11 @@
                 </span>
             </div>
             <span class="live-match-lobby-table-num">
-        	Table #<span><?=$tableNum?></span>
+        	Стіл #<span><?=$tableNum?></span>
             </span>
         </div>
 		<div class="live-match-lobby-table">
 			<h3 class="live-match-lobby-info">
-				Зустріч #
 			</h3>
 			<div class="live-match-lobby-player-table">
 				<div class="live-match-lobby-player">
@@ -43,7 +42,7 @@
 			</div>
 			<div class="button_push">
 				<span>
-					Press CTRL+R to refresh page
+					Натисніть CTRL+R, щоб оновити сторінку
 				</span>
 			</div>
 		</div>
