--- a/public_html/admin/clubs/finished_match.html
+++ b/public_html/admin/clubs/finished_match.html
@@ -44,11 +44,11 @@
 							</tr>
 							<tr>
 								<td id="leftFrames"><?=$score1?></td>
-								<th>Frames</th>
+								<th><?=$bestOf?></th>
 								<td id="rightFrames"><?=$score2?></td>
 							</tr>
 							<tr class="live-match-lobby-frame-details">
-								<td colspan="3">Best of <?=$bestOf?></td>
+								<td colspan="3">Best of</td>
 							</tr>
 						</tbody>
 					</table>
