add hrefs to club and table lobby + remove matchID frm matchButton

--- a/public_html/admin/clubs/finished_match.html
+++ b/public_html/admin/clubs/finished_match.html
@@ -10,15 +10,15 @@
 		<div class="container">
 		
 		<div class="live-match-lobby">
-            <div class="live_match_info">
-                <img class="live_logo_img" src="<?=CLUB_IMG.$club_img?>" alt="club logo">
-                <span class="live_logo_text">
-                    <?=$clubName?>
-                </span>
-            </div>
-            <span class="live-match-lobby-table-num">
-                Стіл #<span><?=$tableNum?></span>
-            </span>
+		<a class="live_match_info" href="<?=PATH_H?>admin/clubs/lobby.php?id=<?=$clubID?>">
+			<img class="live_logo_img" src="<?=CLUB_IMG.$club_img?>" alt="club logo">
+			<span class="live_logo_text">
+				<?=$clubName?>
+			</span>
+		</a>
+		<a class="live-match-lobby-table-num" href="<?=PATH_H?>admin/clubs/tableLobby.php?id=<?=$tableID?>">
+			Стіл #<span><?=$tableNum?></span>
+		</a>
         </div>
 		<div class="live-match-lobby-table">
 			<h3 class="live-match-lobby-info">
@@ -39,7 +39,7 @@
 					<div class="margin-b_50"></div>
 					<table class="live-match-lobby-frame-table">
 						<tbody>
-							<tr class="finished_match_sing">
+							<tr class="finished_match_sign">
 								<td colspan="3">Матч завершено.</td>
 							</tr>
 							<tr>
