--- a/public_html/admin/clubs/finished_match.html
+++ b/public_html/admin/clubs/finished_match.html
@@ -44,7 +44,7 @@
 							</tr>
 							<tr>
 								<td id="leftFrames"><?=$score1?></td>
-								<th class="best_of">&nbsp &nbsp <?=$bestOf?> &nbsp &nbsp</th>
+								<th class="best_of">&nbsp <?=$bestOf?> &nbsp</th>
 								<td id="rightFrames"><?=$score2?></td>
 							</tr>
 							<tr class="live-match-lobby-frame-details">
