--- a/public_html/admin/clubs/finished_match.html
+++ b/public_html/admin/clubs/finished_match.html
@@ -38,12 +38,9 @@
 					</div>
 				</div>
 				<div class="live-match-lobby-frame-section">
-					<div class="margin-b_50"></div>
+					<span class="finished_match_sign">Матч завершено.</span>
 					<table class="live-match-lobby-frame-table">
 						<tbody>
-							<tr class="finished_match_sign">
-								<td colspan="3">Матч завершено.</td>
-							</tr>
 							<tr>
 								<td id="leftFrames"><?=$score1?></td>
 								<th class="best_of">&nbsp <?=$bestOf?> &nbsp</th>
