best of (n) - styling

--- a/public_html/admin/clubs/finished_match.html
+++ b/public_html/admin/clubs/finished_match.html
@@ -38,7 +38,7 @@
 					</div>
 				</div>
 				<div class="live-match-lobby-frame-section">
-					<span class="finished_match_sign">Матч завершено.</span>
+					<span class="finished_match_sign">Матч завершено</span>
 					<table class="live-match-lobby-frame-table">
 						<tbody>
 							<tr>
