rearragne phps for sparring + emptyLobby

--- a/public_html/admin/clubs/empty_sparring.html
+++ b/public_html/admin/clubs/empty_sparring.html
@@ -45,11 +45,11 @@
 					</p>
 				</div>
 			</div>
-<script type="text/javascript" src="<?=PATH_H?>js/emptyLobby.js">
+<script type="text/javascript" src="<?=PATH_H?>js/emptySparringLobby.js">
 </script>
 			<div class="button_push">
 				<span>
-					Натисніть SPACE, щоб почати спаринг
+					Натисніть ESC, щоб покинути меню
 				</span>
 				<span>
 					Натисніть ENTER, щоб оновити сторінку
