--- a/public_html/admin/clubs/match/live_match.html
+++ b/public_html/admin/clubs/match/live_match.html
@@ -4,6 +4,8 @@
 		<?=$clubName?> TABLE <?=$tableNum?>
 	</title>
     <meta charset="utf-8">
+    <meta http-equiv="refresh" content="120;">
+
     <link rel="stylesheet" type="text/css" href="<?=PATH_H?>css/normalize.css">
     <link rel="stylesheet" type="text/css" href="<?=PATH_H?>css/live_match_lobby.css">
 
