--- a/public_html/admin/clubs/sparring/finished_sparring.html
+++ b/public_html/admin/clubs/sparring/finished_sparring.html
@@ -2,6 +2,8 @@
 <head>
     <title><?=$clubName?> TABLE <?=$tableNum?></title>
     <meta charset="utf-8">
+    <meta http-equiv="refresh" content="120;">
+
     <link rel="stylesheet" type="text/css" href="<?=PATH_H?>css/normalize.css">
     <link rel="stylesheet" type="text/css" href="<?=PATH_H?>css/live_match_lobby.css"> 
     <link href="https://fonts.googleapis.com/css?family=Exo+2&display=swap" rel="stylesheet">
