--- a/public_html/admin/clubs/sparring/live_sparring.html
+++ b/public_html/admin/clubs/sparring/live_sparring.html
@@ -1,9 +1,11 @@
 <html>
 <head>
     <title>
-		<?=$clubName?> TABLE <?=$tableNum?>
-	</title>
+         <?=$clubName?> TABLE <?=$tableNum?>
+    </title>
     <meta charset="utf-8">
+    <meta http-equiv="refresh" content="120;">
+
     <link rel="stylesheet" type="text/css" href="<?=PATH_H?>css/normalize.css">
     <link rel="stylesheet" type="text/css" href="<?=PATH_H?>css/live_match_lobby.css">
 
