--- a/public_html/admin/clubs/sparring/live_sparring.html
+++ b/public_html/admin/clubs/sparring/live_sparring.html
@@ -41,7 +41,7 @@
 						<img class="live-match-lobby-player-img" alt="img" src="<?=PLAYER_IMG.$img1?>">
 					</div>
 					<div class="live-player-name">
-						<span class="live-match-lobby-player-name">
+						<span class="live-match-lobby-player-name" id="player1">
 							<?=$player1?>
 						</span>
 					</div>
@@ -94,7 +94,7 @@
 						<img class="live-match-lobby-player-img" alt="img" src="<?=PLAYER_IMG.$img2?>">
 					</div>
 					<div class="live-player-name">
-						<span class="live-match-lobby-player-name">
+						<span class="live-match-lobby-player-name" id="player2">
 							<?=$player2?>
 						</span>
 					</div>
